--- a/08minicontext/src/App.css
+++ b/08minicontext/src/App.css
@@ -1,3 +1,19 @@
+body{
+  background-color: lightpink;
+}
+h1{
+  background-color: green;
+}
+h2{
+  background-color: red;
+}
+div{
+  background-color: purple;
+}
+#name{
+  background-color: lightgreen;
+  color: blue;
+}
 #root {
   max-width: 1280px;
   margin: 0 auto;
